kubernetes/services/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshop-keycloak
  labels:
    app: bookshop-keycloak
spec:
  selector:
    matchLabels:
      app: bookshop-keycloak
  template:
    metadata:
      labels:
        app: bookshop-keycloak
    spec:
      containers:
        - name: bookshop-keycloak
          image: quay.io/keycloak/keycloak:24.0
          args:
            - "start-dev"
            - "--import-realm"
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /realms/master
              port: 8080
            failureThreshold: 40
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 350Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - name: bookshop-keycloak-config-volume
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: bookshop-keycloak-config-volume
          configMap:
            name: bookshop-keycloak

---

apiVersion: v1
kind: Service
metadata:
  name: bookshop-keycloak
  labels:
    app: bookshop-keycloak
spec:
  type: ClusterIP
  selector:
    app: bookshop-keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  labels:
    app: bookshop-keycloak
spec:
  rules:
    - host: bookshop-keycloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookshop-keycloak
                port:
                  number: 80
